release 0.6 (2008-03-07)
- A sub-resource locator can now return a Class instance, that will be
  instantiated using a ComponentProvider, using the life-cycle rules for
  resource classes.
- The HttpURLConnection client implementation sets the content
  length (if known) when sending a request so as to avoid buffering.
- Fixed issue 41: WebApplicationException(500) returning response code 2
  https://jersey.dev.java.net/issues/show_bug.cgi?id=41
- The default values for the following resource configuration features are
  now false: URI normalization, URI path canonicalization and URI redirection.
  This means by default no automatic redirection will be performed.
- The resource configuration feature FEATURE_IGNORE_MATRIX_PARAMS is
  renamed to FEATURE_MATCH_MATRIX_PARAMS and the default value is now false.
- Fixed issue 35: Cryptic error message for invalid media type of response
  https://jersey.dev.java.net/issues/show_bug.cgi?id=35
- When utilizing the ClasspathResourceConfig include files ending
  in .zip and treat them as jar files.
- Fixed NPE for PackagesResourceConfig when scanning directories that
  contain characters such as space (that are percent-encoded in URLs).
- Partially integrated JSR 311 API 0.6
  - java.ws.rs.ext.ProviderFactory replaced with java.ws.rs.ext.RuntimeDelegate.
  - java.ws.rs.ext.HeaderProvider is removed. This is replaced with
    java.ws.rs.ext.RuntimeDelegate.HeaderDelegate.
  - java.ws.rs.UriParam renamed to java.ws.rs.PathParam
  - java.ws.rs.core.HttpContext renamed to java.ws.rs.Context
  - javax.ws.rs.core.Response.Builder renamed to 
    javax.ws.rs.core.Response.ResponseBuilder
  - The charset parameter is removed from javax.ws.rs.core.Variant
    constructor and getters. The method to add one or more charsets has been
    removed from javax.ws.rs.core.Variant.VariantListBuilder. The charset
    parameter must be included as a "charset" parameter of the the media type.