@@ -42,7 +42,7 @@
         <h2>Container</h2>
         <h3>Grizzly HTTP Web server</h3>
         <p>Deploying an application using the Grizzly HTTP Web server requires:</p>
-        <p><blockquote>grizzly-http-webserver-1.7.0.jar</blockquote></p>
+        <p><blockquote>grizzly-http-webserver-1.7.2.jar</blockquote></p>
         <h3>Light weight HTTP server</h3>
         <p>Deploying an application using the light weight HTTP server with
         Java SE 5 requires:</p>
