@@ -23,7 +23,7 @@ file.reference.activation.jar=lib/activation.jar
 file.reference.ant.jar=lib/ant.jar
 file.reference.asm-3.1.jar=lib/asm-3.1.jar
 file.reference.comresrcgen.jar=lib/comresrcgen.jar
-file.reference.grizzly-http-webserver-1.7.0.jar=lib/grizzly-http-webserver-1.7.0.jar
+file.reference.grizzly-http-webserver-1.7.2.jar=lib/grizzly-http-webserver-1.7.2.jar
 file.reference.http.jar=lib/http.jar
 file.reference.jaxb-api.jar=lib/jaxb-api.jar
 file.reference.jaxb-impl.jar=lib/jaxb-impl.jar
@@ -61,7 +61,7 @@ javac.classpath=\
     ${file.reference.persistence-api-1.0.jar}:\
     ${file.reference.servlet.jar}:\
     ${file.reference.jaxws-api.jar}:\
-    ${file.reference.grizzly-http-webserver-1.7.0.jar}:\
+    ${file.reference.grizzly-http-webserver-1.7.2.jar}:\
     ${file.reference.http.jar}:\
     ${file.reference.ant.jar}:\
     ${file.reference.asm-3.1.jar}:\
